--- a/my-app/src/Components/App.css
+++ b/my-app/src/Components/App.css
@@ -1,5 +1,6 @@
 
 body{
+  overflow: hidden;
   margin:0;
 }
 
@@ -10,6 +11,7 @@ body{
 .main-section{
   display:flex;
   background:#FBFBFD;
+  width:100%;
 }
 
 .footer-section{
