--- a/my-app/src/Components/App.css
+++ b/my-app/src/Components/App.css
@@ -1,6 +1,6 @@
 
 body{
-  overflow: hidden;
+  /* overflow: hidden; */
   margin:0;
 }
 
@@ -10,17 +10,21 @@ body{
 
 .main-section{
   display:flex;
-  background:#FBFBFD;
+  background:#F8F8F8;
   width:100%;
 }
 
-.footer-section{
-  margin-bottom:25%;
+.main-section-footer-style{
+  width:100%;
+  display:flex;
+  flex-direction: column;
+  justify-content:space-around;
+  align-items:flex-start;
 }
 
 
 .vertical-menu{
-  background:#f2f2f2;
+  background:#20242c;
   height:100vh;
   width:20%;
 }
