--- a/my-app/src/Components/Footer/Footer.css
+++ b/my-app/src/Components/Footer/Footer.css
@@ -1,5 +1,19 @@
 
 
 .footer-container{
+width:100%;
+}
+
+
+.page-per-view{
   border:1px solid black;
+  display:flex;
+  align-items: center;
+  width:50%;
+}
+
+select{
+  margin:0% 1%;
+  width:50px;
+  height:25px;
 }
