--- a/my-app/src/Components/Footer/Footer.css
+++ b/my-app/src/Components/Footer/Footer.css
@@ -12,7 +12,7 @@ width:100%;
   width:50%;
   display:flex;
   flex-direction: row-reverse;
-  justify-content: space-evenly;
+  justify-content: flex-start;
 }
 
 
