--- a/my-app/src/Components/LandingPage/CandidateInfo/CandidateInfo.css
+++ b/my-app/src/Components/LandingPage/CandidateInfo/CandidateInfo.css
@@ -5,6 +5,12 @@
   position:absolute;
 }
 
+.candidate-picture{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
 .candidate-info{
   display:flex;
 }
@@ -13,6 +19,7 @@
   display:flex;
   align-items: center;
   width:100%;
+  justify-content: space-around;
 }
 
 .last{
