--- a/my-app/src/Components/CandidateList/CandidateInfo/CandidateInfo.css
+++ b/my-app/src/Components/CandidateList/CandidateInfo/CandidateInfo.css
@@ -1,6 +1,5 @@
 
 
-
 .candidate-picture{
   width: 100px;
   height: 100px;
@@ -12,6 +11,7 @@
 }
 
 td{
+  font-size:.8rem;
   text-align:center;
 }
 
